--- a/index.html
+++ b/index.html
@@ -2,38 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- <link rel="stylesheet" href="static/reset.css" -->
     <link rel="stylesheet" href="static/style.css"
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <div class="header_menu">
-            <div class="menu">
-                <div class = "left_menu">
-                    <a class ="menu_element_left menu_element" href="#">About</a>
-                    <a class ="menu_element_left menu_element" href="#">Gallary</a>
-                </div>
-                <img class="menu_image menu_element"  src="static/images/logo.png" alt="Site logo">
-                <div class = "right_menu">
-                    <a class ="menu_element_right menu_element" href="#">Blog</a>
-                    <a class ="menu_element_right menu_element" href="#">Contact</a>
-                </div>
-                <img class="menu_right_image" src="static/images/icon_menu.svg">
+        <div class="menu">
+            <div class = "left_menu">
+                <a href="#">About</a>
+                <a href="#">Gallary</a>
             </div>
+            <img class="menu_image" href="#" src="static/images/logo.png" alt="Site logo">
+            <div class = "right_menu">
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </div>
+            <img class="menu_right_image" src="static/images/icon_menu.svg">
         </div>
-            
-        <!-- <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-        </nav>
-       
-        <h1><span id="Welcome_to_my_site">Welcome to my site</span></h1>
-    <p>This is a paragraph of text.</p> -->
     </header>
-  
+    <footer>
+        <div class="f1"
+    </footer>
 </body>
 </html>
